--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "webpack": "5.9.0"
+    "webpack": "^5.0.0"
   },
   "devDependencies": {
     "uuid": "8.3.1",
